--- a/index-1.html
+++ b/index-1.html
@@ -228,7 +228,7 @@
             <div class="row">
                 <div class="grid_3">
                     <div class="contact-info">
-                        <span class="contact-info_header">call</span>
+                        <span class="contact-info_header">TELÉFONO</span>
                         <div
                                 class="contact-info_icon"><img src="images/phone-icon.png" class="contact-info_icon_phone"
                                                                alt=""/></div>
@@ -264,7 +264,7 @@
         </div>
     </div>
     <div class="privacy">
-        Copyright © <span id="copyright-year"></span> | <a href="index-6.html">Privacy policy</a>
+        <span class="privacy wow bounceInRight">Chiapas Appventure </span> © <span id="copyright-year"></span> | <a href="index-6.html">Privacy policy</a>
     </div>
 </footer>
 </body>
