--- a/index-2.html
+++ b/index-2.html
@@ -293,24 +293,23 @@
             <div class="row">
                 <div class="grid_3">
                     <div class="contact-info">
-                        <span class="contact-info_header">call</span>
+                        <span class="contact-info_header">TELÉFONO</span>
                         <div
                                 class="contact-info_icon"><img src="images/phone-icon.png" class="contact-info_icon_phone"
                                                                alt=""/></div>
-                        <span class="contact-info_description">+1 800 559 6580</span>
-                    </div>
+                        <span class="contact-info_description">961 652 02 43</span></div>
                 </div>
                 <div class="grid_3">
                     <div class="contact-info">
                         <span class="contact-info_header">email</span>
                         <div class="contact-info_icon"><img src="images/mail-icon.png" class="contact-info_icon_email" alt=
                                 ""/></div>
-                        <a class="contact-info_simple-link">mail@demolink.org</a>
+                        <a class="contact-info_simple-link">contacto@treslagunas.com.mx</a>
                     </div>
                 </div>
                 <div class="grid_3">
                     <div class="contact-info socials">
-                        <span class="contact-info_header">follow</span>
+                        <span class="contact-info_header">SÍGUENOS</span>
                         <div
                                 class="contact-info_icon"><img src="images/facebook-icon.png" class="contact-info_icon_facebook" alt=""/><img src="images/twitter-icon.png" class="contact-info_icon_twitter" alt=""/></div>
                         <a class="contact-info_simple-link">Facebook</a><a class="contact-info_simple-link">Twitter</a>
@@ -318,18 +317,17 @@
                 </div>
                 <div class="grid_3">
                     <div class="contact-info">
-                        <span class="contact-info_header">visit</span>
+                        <span class="contact-info_header">visitA</span>
                         <div
                                 class="contact-info_icon"><img src="images/visit-icon.png" class="contact-info_icon_visit"
                                                                alt=""/></div>
-                        <span class="contact-info_description">8901 Marmora Road, Glasgow</span>
-                    </div>
+                        <span class="contact-info_description">Selva Lacandona, Chiapas.</span></div>
                 </div>
             </div>
         </div>
     </div>
     <div class="privacy">
-        Copyright © <span id="copyright-year"></span> | <a href="index-6.html">Privacy policy</a>
+        <span class="privacy wow bounceInRight">Chiapas Appventure </span> © <span id="copyright-year"></span> | <a href="index-6.html">Privacy policy</a>
     </div>
 </footer>
 </body>
