--- a/index-3.html
+++ b/index-3.html
@@ -188,7 +188,7 @@
         </div>
     </div>
     <div class="privacy">
-        Copyright © <span id="copyright-year"></span> | <a href="index-6.html">Privacy policy</a>
+        Chiapas Appventure  © <span id="copyright-year"></span> | <a href="index-6.html">Privacy policy</a>
     </div>
 </footer>
 </body>
