--- a/index.html
+++ b/index.html
@@ -618,14 +618,14 @@
                         <div
                                 class="contact-info_icon"><img src="images/visit-icon.png" class="contact-info_icon_visit"
                                                                                     alt=""/></div>
-                        <span class="contact-info_description">8901 Marmora Road, Glasgow</span>
+                        <span class="contact-info_description">Selva Lacandona, Chiapas.</span>
                     </div>
                 </div>
             </div>
         </div>
     </div>
     <div class="privacy wow bounceInRight">
-        Copyright © <span id="copyright-year"></span> | <a href="index-6.html">Privacy policy</a>
+        Chiapas Appventure © <span id="copyright-year"></span> | <a href="index-6.html">Privacy policy</a>
         <!--{%FOOTER_LINK} -->
     </div>
 </footer>
