--- a/index-5.html
+++ b/index-5.html
@@ -90,8 +90,8 @@
         <div class="row">
             <div class="grid_12">
                 <div class="h2 wow bounceInUp">
-                    <h2>COMO ENCONTRARNOS</h2>
-                    <span class="h2_span">UBICANOS MEDIANTE GOOGLE MAPS</span>
+                    <h2>CÓMO ENCONTRARNOS</h2>
+                    <span class="h2_span">UBÍCANOS MEDIANTE GOOGLE MAPS</span>
                 </div>
             </div>
         </div>
@@ -103,20 +103,17 @@
         <div class="row">
             <div class="grid_9">
                 <div class="post3">
-                <p>Google Maps es un servidor de aplicaciones de mapas en la web que pertenece a Google. Ofrece imágenes de mapas desplazables, así como fotografías por satélite del mundo e incluso la ruta entre diferentes ubicaciones</p>
+                <p>Google Maps es un servidor de aplicaciones de mapas en la web que pertenece a Google. Ofrece imágenes de mapas desplazables, así como fotografías por satélite del mundo e incluso la ruta entre diferentes ubicaciones.</p>
                 <p>
-		    Una de las dificultades con las que se cuenta en ocasiones es el poder ubicar el destino al que se desea llegar, TRES LAGUNAS es uno de los casos ya que es una zona de poca circulacion, pero para ello ocuparemos una valiosa herramienta como lo es Google Maps</p>
+		    Una de las dificultades con las que se cuenta en ocasiones es el poder ubicar el destino al que se desea llegar, TRES LAGUNAS es uno de los casos ya que es una zona de poca circulación, pero para ello ocuparemos una valiosa herramienta como lo es Google Maps.</p>
                 </div>
             </div>
             <div class="grid_3">
                 <address class="address1">
-                    <p class="our-address">8901 Marmora Road,<br>
-                        Glasgow, D04 89GR.</p>
+                    <p class="our-address">Selva Lacandona, Chiapas.</p>
                     <dl>
                         <dt>
-                            <span class="numbers">Freephone:</span><span>+1 800 559 6580</span><br>
-                            <span class="numbers">Telephone:</span><span>+1 800 603 6035</span><br>
-                            <span class="numbers">FAX:</span><span>+1 800 889 9898</span><br>
+                            <span class="numbers">Teléfono: <span class="contact-info_description">961 652 02 43</span></span><span></span><br>
                             <span class="mail">E-mail: </span><span><a href="#" class="privacy-demolink">CONTACTO@TRESLAGUNAS.COM.MX</a></span><br>
                         </dt>
                         <dd></dd>
@@ -127,7 +124,7 @@
         <div class="row">
             <div class="grid_12">
                 <div class="h2 wow bounceInLeft">
-                    <h2>FORMULARIO DE CONTACTO</h2>
+                    <h2>CONTACTO</h2>
                     <span class="h2_span">LLENAR CORRECTAMENTE CADA CAMPO</span>
                 </div>
             </div>
@@ -144,13 +141,13 @@
                                     <span class="empty-message">*This field is required.</span>
                                 </label>
                                 <label class="email">
-                                    <input type="text" name="email" placeholder="CORREO ELECTRONICO:" value=""
+                                    <input type="text" name="email" placeholder="CORREO ELECTRÓNICO:" value=""
                                            data-constraints="@Required @Email" />
                                     <span class="empty-message">*This field is required.</span>
                                     <span class="error-message">*This is not a valid email.</span>
                                 </label>
                                 <label class="phone">
-                                    <input type="text" name="Phone" placeholder="TELEFONO:" value=""
+                                    <input type="text" name="Phone" placeholder="TELÉFONO:" value=""
                                            data-constraints="@Required @JustNumbers" />
                                     <span class="empty-message">*This field is required.</span>
                                     <span class="error-message">*This is not a valid phone.</span>
@@ -160,7 +157,7 @@
 
                             <div class="grid_6">
                                 <label class="message">
-                                    <textarea name="message" placeholder="MENSAGE:" data-constraints='@Required @Length(min=20,max=999999)'></textarea>
+                                    <textarea name="message" placeholder="MENSAJE:" data-constraints='@Required @Length(min=20,max=999999)'></textarea>
                                     <span class="empty-message">*This field is required.</span>
                                     <span class="error-message">*The message is too short.</span>
                                 </label>
