--- a/index-2.html
+++ b/index-2.html
@@ -87,8 +87,9 @@
         <div class="row">
             <div class="grid_12">
                 <div class="h2 wow bounceInUp">
-                    <h2>hot destinations</h2>
-                    <span class="h2_span">Weitas est etiam procesim veniam</span>
+                  <h2>ACTIVIDAdES</h2>
+                    <p class="h2_span">&quot;La aventura hecha naturaleza&quot;. </p>
+                    <p class="h2_span">Las actividades están disponibles en base al número de participantes.</p>
                 </div>
             </div>
         </div>
@@ -97,12 +98,8 @@
                 <div class="post2 post2__offset1">
                     <img src="images/page3_img1.png" alt=""/>
                     <div class="content">
-                        <h3>haiti</h3>
-                        <p>Ut wisi enim ad minim veni
-                            am, quis nostrud exrci tation ullamcorper suscipit.</p>
-                        <a href="#" class="simple-link">Review</a>
-                        <a href="#" class="simple-link">Show map</a>
-                        <a class="btn-default" href="#">more info</a>
+                        <h3>Caminata</h3>
+                        <p>Realiza una caminata por los senderos de lasTres Lagunas.</p>
                     </div>
                 </div>
             </div>
@@ -110,12 +107,8 @@
                 <div class="post2 post2__offset1">
                     <img src="images/page3_img2.png" alt=""/>
                     <div class="content">
-                        <h3>thailand</h3>
-                        <p>Ut wisi enim ad minim veni
-                            am, quis nostrud exrci tation ullamcorper suscipit.</p>
-                        <a href="#" class="simple-link">Review</a>
-                        <a href="#" class="simple-link">Show map</a>
-                        <a class="btn-default" href="#">more info</a>
+                        <h3>KAYAK</h3>
+                        <p>Renta de cayuco o de canoa para explorar las lagunas.</p>
                     </div>
                 </div>
             </div>
@@ -123,12 +116,8 @@
                 <div class="post2 post2__offset1">
                     <img src="images/page3_img3.png" alt=""/>
                     <div class="content">
-                        <h3>jamaica</h3>
-                        <p>Ut wisi enim ad minim veni
-                            am, quis nostrud exrci tation ullamcorper suscipit.</p>
-                        <a href="#" class="simple-link">Review</a>
-                        <a href="#" class="simple-link">Show map</a>
-                        <a class="btn-default" href="#">more info</a>
+                        <h3>RÍO LACANJÁ</h3>
+                        <p>Conoce la flora y la fauna que habita la Selva Lacandona.</p>
                     </div>
                 </div>
             </div>
@@ -136,12 +125,8 @@
                 <div class="post2 post2__offset1">
                     <img src="images/page3_img4.png" alt=""/>
                     <div class="content">
-                        <h3>bahamas</h3>
-                        <p>Ut wisi enim ad minim veni
-                            am, quis nostrud exrci tation ullamcorper suscipit.</p>
-                        <a href="#" class="simple-link">Review</a>
-                        <a href="#" class="simple-link">Show map</a>
-                        <a class="btn-default" href="#">more info</a>
+                        <h3>COCODRILARIO</h3>
+                        <p>Realiza avistamiento Nocturno de Cocodrilo.</p>
                     </div>
                 </div>
             </div>
@@ -149,12 +134,8 @@
                 <div class="post2 post2__offset1">
                     <img src="images/page3_img5.png" alt=""/>
                     <div class="content">
-                        <h3>cyprus</h3>
-                        <p>Ut wisi enim ad minim veni
-                            am, quis nostrud exrci tation ullamcorper suscipit.</p>
-                        <a href="#" class="simple-link">Review</a>
-                        <a href="#" class="simple-link">Show map</a>
-                        <a class="btn-default" href="#">more info</a>
+                        <h3>SIEMBRA, PLANTA Y DÁ VIDA.</h3>
+                        <p>Siembra un árbol en la Selva Lacadona.</p>
                     </div>
                 </div>
             </div>
@@ -162,12 +143,8 @@
                 <div class="post2 post2__offset1">
                     <img src="images/page3_img6.png" alt=""/>
                     <div class="content">
-                        <h3>turkey</h3>
-                        <p>Ut wisi enim ad minim veni
-                            am, quis nostrud exrci tation ullamcorper suscipit.</p>
-                        <a href="#" class="simple-link">Review</a>
-                        <a href="#" class="simple-link">Show map</a>
-                        <a class="btn-default" href="#">more info</a>
+                        <h3>CAMPING</h3>
+                        <p>Acampa en la Selva Lacandona, ya sea en el centro ecoturístico o cerca del Río Lacanjá.</p>
                     </div>
                 </div>
             </div>
@@ -175,110 +152,21 @@
                 <div class="post2 post2__offset1">
                     <img src="images/page3_img7.png" alt=""/>
                     <div class="content">
-                        <h3>zaire</h3>
-                        <p>Ut wisi enim ad minim veni
-                            am, quis nostrud exrci tation ullamcorper suscipit.</p>
-                        <a href="#" class="simple-link">Review</a>
-                        <a href="#" class="simple-link">Show map</a>
-                        <a class="btn-default" href="#">more info</a>
-                    </div>
+                        <h3>FOGATA</h3>
+                        <p>Ten una estancia agradable durante la noche junto a una fogata escuchando historias de la Selva Lacandona.<a href="#" class="simple-link"></a></p></div>
                 </div>
             </div>
             <div class="grid_3">
                 <div class="post2 post2__offset1">
                     <img src="images/page3_img8.png" alt=""/>
                     <div class="content">
-                        <h3>bali</h3>
-                        <p>Ut wisi enim ad minim veni
-                            am, quis nostrud exrci tation ullamcorper suscipit.</p>
-                        <a href="#" class="simple-link">Review</a>
-                        <a href="#" class="simple-link">Show map</a>
-                        <a class="btn-default" href="#">more info</a>
-                    </div>
+                      <h3>FOTOGRAFÍA</h3>
+                        <p>Puedes fotografear lo que tú desees, esta actividad es libre en la Selva Lacandona.</p></div>
                 </div>
             </div>
         </div>
     </div>
-
-    <div class="margins1">
-        <div class="container">
-            <div class="row">
-                <div class="grid_12">
-                    <div class="h2 wow bounceInDown">
-                        <h2>choose country you are interested in</h2>
-                        <span class="h2_span">Weitas est etiam procesim veniam</span>
-                    </div>
-                </div>
-            </div>
-            <div class="row wow bounceInUp">
-                <div class="grid_2">
-                    <ul class="list1">
-                        <li><a href="#">Afghanistan</a></li>
-                        <li><a href="#">Albania</a></li>
-                        <li><a href="#">American Samoa</a></li>
-                        <li><a href="#">Antarctica</a></li>
-                        <li><a href="#">Argentina</a></li>
-                        <li><a href="#">Armenia</a></li>
-                        <li><a href="#">Australia</a></li>
-                    </ul>
-                </div>
-                <div class="grid_2">
-                    <ul class="list1">
-                        <li><a href="#">Austria</a></li>
-                        <li><a href="#">Bahrain</a></li>
-                        <li><a href="#">Barbados</a></li>
-                        <li><a href="#">Belgium</a></li>
-                        <li><a href="#">Belize</a></li>
-                        <li><a href="#">Bermuda</a></li>
-                        <li><a href="#">Botswana</a></li>
-                    </ul>
-                </div>
-                <div class="grid_2">
-                    <ul class="list1">
-                        <li><a href="#">Brazil</a></li>
-                        <li><a href="#">British Virgin Islands</a></li>
-                        <li><a href="#">Brunei</a></li>
-                        <li><a href="#">Bulgaria</a></li>
-                        <li><a href="#">Cambodia</a></li>
-                        <li><a href="#">Cayman Islands</a></li>
-                        <li><a href="#">Chile</a></li>
-                    </ul>
-                </div>
-                <div class="grid_2">
-                    <ul class="list1">
-                        <li><a href="#">China</a></li>
-                        <li><a href="#">Colombia</a></li>
-                        <li><a href="#">Congo (Dem. Rep.)</a></li>
-                        <li><a href="#">Cook Islands</a></li>
-                        <li><a href="#">Costa Rica</a></li>
-                        <li><a href="#">Croatia</a></li>
-                        <li><a href="#">Cuba</a></li>
-                    </ul>
-                </div>
-                <div class="grid_2">
-                    <ul class="list1">
-                        <li><a href="#">Czech Republic</a></li>
-                        <li><a href="#">Denmark</a></li>
-                        <li><a href="#">Dominican Republic</a></li>
-                        <li><a href="#">Ecuador</a></li>
-                        <li><a href="#">Egypt</a></li>
-                        <li><a href="#">Eritrea</a></li>
-                        <li><a href="#">Estonia</a></li>
-                    </ul>
-                </div>
-                <div class="grid_2">
-                    <ul class="list1">
-                        <li><a href="#">Falkland Islands</a></li>
-                        <li><a href="#">Fiji Islands</a></li>
-                        <li><a href="#">Finland</a></li>
-                        <li><a href="#">France</a></li>
-                        <li><a href="#">French Polynesia</a></li>
-                        <li><a href="#">Germany</a></li>
-                        <li><a href="#">View all</a></li>
-                    </ul>
-                </div>
-            </div>
-        </div>
+    </div>
     </div>
 </section>
 
