--- a/index-4.html
+++ b/index-4.html
@@ -206,7 +206,7 @@
                             </div>
                         </div>
                         <div class="clearfix"></div>
-                        <a class="btn-default" href="#" data-type="submit">send a request</a>
+                        <a class="btn-default" href="#" data-type="submit">ENVIAR</a>
                     </form>
                 </div>
             </div>
