--- a/index-1.html
+++ b/index-1.html
@@ -118,17 +118,17 @@
             <div class="row">
                 <div class="grid_12">
                     <div class="post4">
-                        <h3>Praesent justo dolor, lobortis quis, lobortis dignissim, pulvinar ac, lorem</h3>
-                        <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Praesent vestibulum molestie lacus. Aenean nonummy hendrerit mauris. Phasellus porta. Fusce suscipit varius mi. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Nulla dui. Fusce feugiat malesuada odio. Morbi nunc odio, gravida at, cursus nec, luctus a, lorem. Maecenas tristique orci ac sem.</p>
+                        <h3>LA SELVA LACANDONA; LOS PULMONES DE CHIAPAS, MÉXICO, PARA EL MUNDO.</h3>
+                        <p>El Santuario del Cocodrilo Tres Lagunas tiene diferentes objetivos que contribuyen con la ecología, la naturaleza y el medio ambiente con estrategias que son las adecuadas para estas maravillas naturales.</p>
 
                         <div class="row">
                             <div class="grid_6">
-                                <div class=" marker marker1"><img src="images/page2_icon1.png" alt=""/></div>
-                                <p class="marker_p"><a href="#">Praesent vestibulum molestie lacus. Aenean nonummy hendrerit mauris. Phasellus porta. Fusce suscipit varius mi. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Nulla dui.</a></p>
+                              <div class=" marker marker1"><img src="images/page2_icon1.png" alt=""/></div>
+                                <p class="marker_p"><a href="#">Estamos trabajando con organizaciones para que el lugar sea más conocido y se recaudan fondos a beneficio de la comunidad lacandona.</a>                            </p>
                             </div>
                             <div class="grid_6">
                                 <div class="marker marker2"><img src="images/page2_icon2.png" alt=""/></div>
-                                <p class="marker_p"><a href="#">Praesent vestibulum molestie lacus. Aenean nonummy hendrerit mauris. Phasellus porta. Fusce suscipit varius mi. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Nulla dui.</a></p>
+                                <p class="marker_p"><a href="#">Mediante los proyectos, se contribuye ampliamente a preservar la flora y fauna de este maravilloso lugar.</a></p>
                             </div>
                         </div>
                     </div>
