--- a/index.html
+++ b/index.html
@@ -177,22 +177,22 @@
               <div class="row">
                   <div class="grid_4">
                       <div class="post1 wow bounceInLeft">
-                          <h3><a href="#">hotel info</a></h3>
-                          <p>Typi non habent claritatem<br>insitam; est usus legentis in iis</p>
+                          <h3><a href="#">UN AGRADABLE DESCANSO</a></h3>
+                          <p>Conoce las cabañas que tenemos para ti.</p>
                           <a href="#"><div class="sprite sprite1"></div></a>
                       </div>
                   </div>
                   <div class="grid_4">
                       <div class="post1 wow fadeIn">
-                          <h3><a href="#">hot tours</a></h3>
-                          <p>Non habent claritatem insitam;<br>est usus legentis in iis qui facit</p>
+                          <h3><a href="#">CONOCE TRES LAGUNAS</a></h3>
+                          <p>Dale un vistazo al recorrido virtual de Tres Lagunas.</p>
                           <a href="#"><div class="sprite sprite2"></div></a>
                       </div>
                   </div>
                   <div class="grid_4">
                       <div class="post1 wow bounceInRight">
-                          <h3><a href="#">consulting</a></h3>
-                          <p>Aeri non habent claritatem<br>nsitam; est usus legentis in iis</p>
+                          <h3><a href="#">CONSÚLTANOS</a></h3>
+                          <p>Escríbenos, pronto te atenderemos.</p>
                           <a href="#"><div class="sprite sprite3"></div></a>
                       </div>
                   </div>
